--- a/web-pages/index.html
+++ b/web-pages/index.html
@@ -94,6 +94,9 @@
   	  <li class="nav-item">
           <a class="nav-link disabled" href="#">Support</a>
         </li>
+          <li class="nav-item">
+              <a class="nav-link disabled" href="whats-new.html">What's New?</a>
+            </li>
 
       </ul>
 
